WIP to fix tabs of popup on small resolutions

--- a/app/assets/stylesheets/cfp/config/_responsive_medium.css.scss
+++ b/app/assets/stylesheets/cfp/config/_responsive_medium.css.scss
@@ -9,3 +9,16 @@
     padding-top: 150px;
   }
 }
+
+@media screen and (max-width: 1554px) {
+
+  // Pop-up -----------------
+  .ui-tabs-nav {
+    li {
+
+      a {
+        line-height: 2;
+      }
+    }
+  }
+}
