--- a/app/assets/stylesheets/cfp/ui/_popup.css.scss
+++ b/app/assets/stylesheets/cfp/ui/_popup.css.scss
@@ -12,7 +12,6 @@
   }
 
   p {
-    text-align: center;
     font-size: 1.3em;
     font-family: 'Roboto';
     font-weight: 300;
@@ -60,7 +59,6 @@
     text-transform: uppercase;
     font-weight: 300;
     padding: 10px 22px;
-    border-bottom: 2px solid $line;
     margin: 0;
 
     a {
